; ModuleID = '/home/carl/AnghaBench/sqlcipher/test/extr_threadtest3.c_md5finalize.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/test/extr_threadtest3.c_md5finalize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_TRANSIENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @md5finalize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @md5finalize(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca [16 x i8], align 16
  %5 = alloca [33 x i8], align 16
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @sqlite3_aggregate_context(i32* %6, i32 4)
  store i32* %7, i32** %3, align 8
  %8 = getelementptr inbounds [16 x i8], [16 x i8]* %4, i64 0, i64 0
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @MD5Final(i8* %8, i32* %9)
  %11 = getelementptr inbounds [16 x i8], [16 x i8]* %4, i64 0, i64 0
  %12 = getelementptr inbounds [33 x i8], [33 x i8]* %5, i64 0, i64 0
  %13 = call i32 @MD5DigestToBase16(i8* %11, i8* %12)
  %14 = load i32*, i32** %2, align 8
  %15 = getelementptr inbounds [33 x i8], [33 x i8]* %5, i64 0, i64 0
  %16 = load i32, i32* @SQLITE_TRANSIENT, align 4
  %17 = call i32 @sqlite3_result_text(i32* %14, i8* %15, i32 -1, i32 %16)
  ret void
}

declare dso_local i32* @sqlite3_aggregate_context(i32*, i32) #1

declare dso_local i32 @MD5Final(i8*, i32*) #1

declare dso_local i32 @MD5DigestToBase16(i8*, i8*) #1

declare dso_local i32 @sqlite3_result_text(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
